Tue Jan 25 17:27:53 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/http.c: Commented out gw_free calls for error situations,
	where it causes a segfault for some reason. This is not a fix,
	it is an ugly workaround, but it should avoid the problem until
	we have time to review the whole memory allocation/freeing
	situation. (The gateway is already leaking memory a lot.)

Tue Jan 25 17:14:12 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/thread.c: Added comments to explain how mutex_try_lock
	works, and fixed a bug that left the mutex locked in case of
	recursive locks.

Tue Jan 25 16:51:43 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c, gw/wsp_state-decl.h, gwlib/octstr.c: Applied patch
	from francois-xavier.hannedouche@philips.com to provide partial
	support for Post PDU with only one argument. Also adds support
	for enabling a reconnection.

Tue Jan 25 14:59:05 2000  Lars Wirzenius  <liw@wapit.com>

	* utils/seewbmp.c: Added to CVS. Simple debugging tool written by
	Richard Braakman.
	
	* Makefile.in: Related changes.

2000-01-25    <rpr@rpr.wapit.com>

	* gw/bb_msg.c: Fixed error in rq_pull_smg_class, which caused
	failure with 2 wapboxes. Hopefully did not break SMS portion.

	* gw/csdr.c: commented out octstr_dump of each incoming message

	* gw/*.*conf: edited them so that no-one can use them without
	editing, should handle loads of basic questions in devel-list

	* gw/*box.c: put an appropriate error message

2000-01-25    <rpr@rpr.wapit.com>

	* gw/bearerbox.c: One fix more, now the internal smsbox does not
	consume all the CPU it can

2000-01-25    <rpr@rpr.wapit.com>

	* gw/bearerbox.c: Some optimization to queue watchers, now it
	should not do updates with no effect, hopefully reducing CPU usage
	in a long run.

Mon Jan 24 21:23:43 2000  Lars Wirzenius  <liw@wapit.com>

	* README: Updated a bit.

Mon Jan 24 21:01:50 2000  Lars Wirzenius  <liw@wapit.com>

	* Makefile.in: Fixed install target.
	
	* VERSION: Marked as non-release version.
